# nova-forge

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVPOST.md  Dockerfile  GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  SUBMISSION_CHECKLIST.md  benchmark_expense_tracker.py  benchmark_nova_models.py  challenge_build.py  config.py  demo_nova_e2e.py  docker-compose.yml  forge-herakles-dev.conf  forge.py  forge_agent.py  forge_assistant.py  forge_audit.py  forge_cli.py  forge_comms.py  forge_competition.py  forge_compliance.py  forge_deployer.py  forge_display.py  forge_guards.py  forge_hooks.py  forge_hooks_impl.py  forge_index.py  forge_livereload.py  forge_memory.py  forge_migrate.py  forge_models.py  forge_orchestrator.py  forge_pipeline.py  forge_preview.py  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
agents/: ai-integration-specialist.yml  auth-specialist.yml  backend-architect.yml  ci-cd-architect.yml  code-quality-engineer.yml  database-engineer.yml  frontend-specialist.yml  performance-optimizer.yml  real-time-engineer.yml  security-engineer.yml  spec-architect.yml  spec-implementer.yml  spec-integrator.yml  spec-optimizer.yml  spec-planner.yml  spec-recovery.yml  spec-reviewer.yml  spec-security.yml  spec-tester.yml  testing-engineer.yml
benchmarks/: CHANGELOG.md  PROTOCOL.md  benchmark_store.py  latest.json  latest_nova-lite.json  latest_nova-premier.json  latest_nova-pro.json
benchmarks/runs/: runs.jsonl
schemas/: agent-registry.schema.json  autonomy-state.schema.json  formation-config.schema.json  formation-registry.schema.json  memory-index.schema.json  task-metadata.schema.json  task-state.schema.json  tool-policy.schema.json
scripts/: generate_synthetic_cast.py  postprocess_cast.py  record-demo.sh  record_demo.py  test-harness.sh
scripts/manual-tests/: test-error-injection.sh  test-nova-lite.sh  test-nova-premier.sh  test-nova-pro.sh  test-preview-deploy.sh  test-regression.sh
templates/flask-api/: Dockerfile  FORGE.md  app.py
templates/nova-chat/: FORGE.md  app.py
templates/static-site/: Dockerfile  FORGE.md  index.html  style.css
tests/: conftest.py
tests/unit/: test_agent.py  (+42 more)
web/: app.js  demo-real.cast  demo.cast  guide.html  index.html  style.css
(+89 files in other folders)
